# jidalli

./: .dockerignore  .gitignore  Dockerfile  Untitled-1.sqlite3-query  compose.debug.yaml  compose.yaml  crud.py  database.py  game.py  jidalli.db  main.py  models.py  pyproject.toml  requirements.txt  schemas.py  test_email.py
k8s/: deploy.yaml  jidalli-svc.yaml
static/: script.js  style1.css  style2.css
templates/: base.html  base1.html  complete_match.html  create_player.html  create_tournament.html  create_tournament1.html  email_verification.html  index.html  index1.html  login.html  match1.html  players.html  register.html  register_success.html  resend_verification.html  round_advance.html  standings.html  tournament1.html  tournament_bracket.html  winner.html  winner1.html
